# AgentConfigurator

./: .gitignore  MIGRATION_GUIDE.md  README.md  README_VITE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
agent/: .env.example  langgraph.json  pyproject.toml  requirements.txt
agent/sample_agent/: agent.py  agent_configuration.py  demo.py
server/: index.ts
src/: App.tsx  main.tsx
src/app/: page.tsx
src/app/api/copilotkit/: route.ts
